update image size to avoid layout shift when loading preview

--- a/src/components/message-list/styles.module.scss
+++ b/src/components/message-list/styles.module.scss
@@ -61,7 +61,7 @@
         object-fit: contain;
         aspect-ratio: 4 / 3; /* adjust this to match your image's aspect ratio */
         width: 100%;
-        max-width: 220px;
+        width: 220px;
         border-radius: 10px;
         cursor: pointer
       }
